--- a/unidade1.html
+++ b/unidade1.html
@@ -456,25 +456,25 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Atividade 1: Conceitos básicos de PDI</p>
+<p><a href="atividade1.html">Atividade 1: Conceitos básicos de PDI</a></p>
 </li>
 <li>
-<p>Atividade 2: Operações no domínio espacial</p>
+<p><a href="atividade2.html">Atividade 2: Operações no domínio espacial</a></p>
 </li>
 <li>
-<p>Atividade 3: Transformações de intensidade</p>
+<p><a href="atividade3.html">Atividade 3: Transformações de intensidade</a></p>
 </li>
 <li>
-<p>Atividade 4: Filtros espaciais</p>
+<p><a href="atividade4.html">Atividade 4: Filtros espaciais</a></p>
 </li>
 <li>
-<p>Atividade 5: Histograma e equalização</p>
+<p><a href="atividade5.html">Atividade 5: Histograma e equalização</a></p>
 </li>
 <li>
-<p>Atividade 6: Detecção de bordas</p>
+<p><a href="atividade6.html">Atividade 6: Detecção de bordas</a></p>
 </li>
 <li>
-<p>Atividade 7: Segmentação de imagens</p>
+<p><a href="atividade7.html">Atividade 7: Segmentação de imagens</a></p>
 </li>
 </ul>
 </div>
@@ -483,7 +483,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-08 14:20:58 -0300
+Last updated 2024-11-08 16:13:28 -0300
 </div>
 </div>
 </body>
