--- a/pdi.html
+++ b/pdi.html
@@ -462,7 +462,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="unidade1.html">Unidade 1 - Introdução ao PDI e Conceitos Básicos</a></p>
 </li>
 <li>
-<p>Unidade 2 - Em breve</p>
+<p><a href="unidade2.html">Unidade 2 - Estudo de PDI e Conceitos Intermediarios</a></p>
 </li>
 </ul>
 </div>
@@ -471,7 +471,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-08 14:21:03 -0300
+Last updated 2025-01-17 15:01:35 -0300
 </div>
 </div>
 </body>
