--- a/pdi.html
+++ b/pdi.html
@@ -464,6 +464,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="unidade2.html">Unidade 2 - Estudo de PDI e Conceitos Intermediarios</a></p>
 </li>
+<li>
+<p><a href="unidade3.html">Unidade 3 - Estudo de PDI e Avançados</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -471,7 +474,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-17 15:01:35 -0300
+Last updated 2025-01-29 16:28:02 -0300
 </div>
 </div>
 </body>
