--- a/unidade3.html
+++ b/unidade3.html
@@ -459,7 +459,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="atividadeu3_1.html">Atividade 1X: Extração de Contornos em Imagens</a></p>
+<p><a href="atividadeu3_1.html">Atividade 1: Extração de Contornos em Imagens</a></p>
 </li>
 <li>
 <p><a href="atividadeu3_2.html">Atividade 2: Cálculo de Momentos de Hu e Rotulagem de Formas</a></p>
