--- a/unidade3.html
+++ b/unidade3.html
@@ -459,16 +459,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="atividadeu3_1.html">Atividade X: Extração de Contornos em Imagens</a></p>
+<p><a href="atividadeu3_1.html">Atividade 1X: Extração de Contornos em Imagens</a></p>
 </li>
 <li>
-<p><a href="atividadeu3_2.html">Atividade X: Cálculo de Momentos de Hu e Rotulagem de Formas</a></p>
+<p><a href="atividadeu3_2.html">Atividade 2: Cálculo de Momentos de Hu e Rotulagem de Formas</a></p>
 </li>
 <li>
-<p><a href="atividadeu3_3.html">Atividade X: </a></p>
+<p><a href="atividadeu3_3.html">Atividade 3: Extração de características: Momentos de Hu para contornos</a></p>
 </li>
 <li>
-<p><a href="atividadeu3_4.html">Atividade X: Filtragem de Forma com Operações Morfológicas</a></p>
+<p><a href="atividadeu3_4.html">Atividade 4: Filtragem de Forma com Operações Morfológicas</a></p>
 </li>
 </ul>
 </div>
@@ -477,7 +477,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-29 16:26:56 -0300
+Last updated 2025-01-29 16:28:18 -0300
 </div>
 </div>
 </body>
